--- a/SimTECH/SimTECH/Pages/Stats/Dialogs/ObsoleteDriverComparison.razor
+++ b/SimTECH/SimTECH/Pages/Stats/Dialogs/ObsoleteDriverComparison.razor
@@ -1,4 +1,5 @@
-﻿<MudDialog>
+﻿@using SimTECH.PageModels.Stats
+<MudDialog>
     <DialogContent>
         <MudPaper Elevation="30" Width="1100px" Class="pa-2" id="driver-comparison-stat-view">
             <MudStack Row="true" AlignItems="AlignItems.Center" Class="px-0 pb-2">
