--- a/SimTECH/SimTECH/Shared/Components/SimProgressLinear.razor
+++ b/SimTECH/SimTECH/Shared/Components/SimProgressLinear.razor
@@ -1,9 +1,8 @@
-﻿<div class="flat-linear-race-bar muted-background-primary"
-     style="@_lineStyles">
+﻿<div class="flat-linear-race-bar muted-background-primary" style="@_lineStyles">
     @foreach (var (bar, index) in Bars.WithIndex())
     {
         <span style="@(BarStyle(bar.Item1, bar.Item2))">
-            @if (AddIndicator && (index % 2 == 0))
+            @if (AddIndicator && (index % indicatorAdvanceSize == 0))
             {
                 <MudText Typo="Typo.h5" Style="font-size: 0.75rem">
                     @(IndicatorText(1 + index))
@@ -14,8 +13,10 @@
 </div>
 
 @code {
+    private const int indicatorAdvanceSize = 2; // change dependant on current AdvDis (re:10)
+
     [Parameter, EditorRequired] public List<(double, string)> Bars { get; set; }
-    [Parameter] public bool AddIndicator { get; set; } = false;
+    [Parameter] public bool AddIndicator { get; set; }
     [Parameter] public int CalculationDistance { get; set; }
     [Parameter] public double TrackLength { get; set; }
     [Parameter] public ElementSize LineSize { get; set; } = ElementSize.Small;
