--- a/SimTECH/SimTECH/Pages/RaceWeek/Tabs/Landing.razor
+++ b/SimTECH/SimTECH/Pages/RaceWeek/Tabs/Landing.razor
@@ -352,7 +352,7 @@
             <MudText Class="my-2" Typo="Typo.body2" Color="Color.Warning">
                 I should hire a web designer.
             </MudText>
-            <MudText Typo="Typo.subtitle2">Bob :(</MudText>
+            <MudText Typo="Typo.subtitle2">Bob :)</MudText>
             <MudText Class="my-1">
                 Carefulness equalizes smartfulness
                 <br />
