Tinkering and modifying sum stuff un thangs mang

--- a/SimTECH/SimTECH/Pages/RaceWeek/Components/SimRacerProgressionLinear.razor
+++ b/SimTECH/SimTECH/Pages/RaceWeek/Components/SimRacerProgressionLinear.razor
@@ -19,14 +19,13 @@
     {
         get
         {
-            if (RaceDriver == null)
-                return new();
-
             // Filters out the lapscore created on formation
             return RaceDriver.LapScores
                 .Where(e => e.Order > 0)
                 .ToList()
-                .ConvertAll(e => (NumberHelper.Percentage(1, CalculationCount), e.TyreColour ?? Globals.DefaultColour));
+                .ConvertAll(e =>
+                    (NumberHelper.Percentage(1, CalculationCount),
+                    e.TyreColour ?? Globals.DefaultColour));
         }
     }
 }
