--- a/SimTECH/SimTECH/Pages/Seasons/Overview/Tabs/SeasonTeams.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/Tabs/SeasonTeams.razor
@@ -1,4 +1,6 @@
-﻿<MudContainer MaxWidth="MaxWidth.ExtraLarge" Class="px-0">
+﻿@inject SeasonEngineService _seasonEngineService
+
+<MudContainer MaxWidth="MaxWidth.ExtraLarge" Class="px-0">
     <MudPaper MinHeight="60px">
         <MudStack Row="true" AlignItems="AlignItems.Center" Class="pa-4">
             <MudText Typo="Typo.h3">Teams</MudText>
@@ -64,23 +66,22 @@
 
     private bool loading = true;
 
-    // Warning: this is also triggered when just pressing the button to start editing
-    protected override void OnParametersSet()
+    protected override async Task OnInitializedAsync()
+    {
+        await RestoreSeasonTeams();
+    }
+
+    private async Task RestoreSeasonTeams()
     {
         loading = true;
 
-        RestoreSeasonTeams();
-
-        loading = false;
-    }
-
-    private void RestoreSeasonTeams()
-    {
         TeamItems.Clear();
+
+        var seasonEngines = await _seasonEngineService.GetSeasonEngines(OverviewModel.Season.Id);
 
         foreach (var team in OverviewModel.ClassTeams)
         {
-            var engine = OverviewModel.SeasonEngines.FirstOrDefault(e => e.Id == team.SeasonEngineId);
+            var engine = seasonEngines.FirstOrDefault(e => e.Id == team.SeasonEngineId);
             var manufacturer = OverviewModel.Manufacturers.FirstOrDefault(e => e.Id == team.ManufacturerId);
 
             var listing = new SeasonTeamList
@@ -104,11 +105,15 @@
 
             TeamItems.Add(listing);
         }
+
+        loading = false;
     }
 
-    async Task AddItem() => await UpdateItem(null);
-    async Task UpdateItem(SeasonTeam? item)
+    private async Task AddItem() => await UpdateItem(null);
+    private async Task UpdateItem(SeasonTeam? item)
     {
         await OnEditorOpen.InvokeAsync(item);
+
+        await RestoreSeasonTeams();
     }
 }
