Moved some code around

--- a/SimTECH/SimTECH/Pages/RaceWeek/Tabs/Landing.razor
+++ b/SimTECH/SimTECH/Pages/RaceWeek/Tabs/Landing.razor
@@ -1,6 +1,6 @@
 ﻿@using SimTECH.Pages.RaceWeek.Components
 
-<MudGrid id="raceweek-landing" Spacing="1">
+<MudGrid Spacing="1" id="raceweek-landing">
     <MudItem xs="12">
         <MudPaper MinHeight="60px" Class="pa-2 flex-block-row justify-space-between">
             <div class="btn-md"></div>
@@ -15,7 +15,7 @@
     <MudItem xs="2">
         <MudPaper Class="pa-4 mud-height-full">
             <MudText Typo="Typo.h5">Track information</MudText>
-            <MudDivider Class="my-2" />
+            <MudDivider Class="my-1" />
             <dl class="property-list">
                 <dt>
                     <CountryNamedFlag Code="@Model.Race.Track.Country" Size="ElementSize.Normal" Reverse="true" />
@@ -39,7 +39,7 @@
             </dl>
 
             <MudText Typo="Typo.subtitle1">Circuit traits</MudText>
-            <MudDivider Class="my-2" />
+            <MudDivider Class="my-1" />
             @if (TrackTraits.Any() == true)
             {
                 <dl class="property-list">
