--- a/SimTECH/SimTECH/Pages/Seasons/Index.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Index.razor
@@ -4,7 +4,7 @@
 @using SimTECH.PageModels.Seasons;
 
 @inject BreadcrumbProvider _bread
-@inject NavigationManager _nav
+@inject NavigationManager _navigation
 @inject LeagueService _leagueService
 @inject SeasonService _seasonService
 @inject IDialogService _dialogService
@@ -12,82 +12,87 @@
 <PageTitle>Seasons</PageTitle>
 
 <MudContainer MaxWidth="MaxWidth.ExtraLarge" Class="mt-4">
-    @if (SeasonListItems != null)
-    {
-        <MudPaper MinHeight="60px">
-            <MudStack Row="true" AlignItems="AlignItems.Center" Class="pa-4">
-                <MudText Typo="Typo.h3">Seasons</MudText>
-                <MudSpacer />
-                <MudButton Variant="Variant.Outlined" Color="Color.Tertiary" Size="Size.Small" OnClick="NewSeason"
-                           StartIcon="@Icons.Material.Filled.Add" IconSize="Size.Small" IconColor="Color.Tertiary" Class="btn-md">
-                    New
-                </MudButton>
-            </MudStack>
-        </MudPaper>
-        <MudDataGrid T="SeasonListModel" Items="@SeasonListItems.OrderByDescending(e => e.Year)" Dense="true">
-            <Columns>
-                <PropertyColumn Property="e => e.Year" />
-                <TemplateColumn T="SeasonListModel" Title="NO" SortBy="e => e.DriverNumber" HeaderClass="number-col hide-sort-icons" CellClass="number-col">
-                    <CellTemplate>
-                        <NumberDisplay Colour="@context.Item.DriverColour"
-                                       Accent="@context.Item.DriverAccent">
-                            @context.Item.DriverNumber
-                        </NumberDisplay>
-                    </CellTemplate>
-                </TemplateColumn>
-                <TemplateColumn T="SeasonListModel" Title="Leading driver">
-                    <CellTemplate>
-                        <MudStack Row="true" AlignItems="AlignItems.Center">
-                            <MudText Class="overflow-hider">@context.Item.DriverName</MudText>
-                            <MudSpacer />
-                            <CountryFlag Code="context.Item.DriverNationality" Size="ElementSize.Small" />
-                        </MudStack>
-                    </CellTemplate>
-                </TemplateColumn>
-                <TemplateColumn T="SeasonListModel" Sortable="false" Class="accent-cell">
-                    <CellTemplate>
-                        <SmolAccent Colour="@context.Item.TeamColour" />
-                    </CellTemplate>
-                </TemplateColumn>
-                <TemplateColumn T="SeasonListModel" Title="Leading team">
-                    <CellTemplate>
-                        <MudStack Row="true" AlignItems="AlignItems.Center">
-                            <MudText Class="overflow-hider">@context.Item.TeamName</MudText>
-                            <MudSpacer />
-                            <CountryFlag Code="context.Item.TeamNationality" Size="ElementSize.Small" />
-                        </MudStack>
-                    </CellTemplate>
-                </TemplateColumn>
-                <PropertyColumn Property="e => e.League" />
-                <PropertyColumn Property="e => e.State" />
-                <TemplateColumn T="SeasonListModel" Sortable="false">
-                    <CellTemplate>
-                        <MudButtonGroup Size="@Size.Small">
-                            <MudIconButton Icon="@Icons.Material.Outlined.ContentCopy" OnClick="@(() => CopySeason(context.Item.Id))" />
-                            <MudIconButton Icon="@Icons.Material.Outlined.Logout" OnClick="@(() => GoToOverview(context.Item.Id))" />
-                            @if (context.Item.State == State.Concept)
-                            {
-                                <MudIconButton Color="Color.Error" Icon="@Icons.Material.Outlined.Delete" OnClick="@(async() => await DeleteSeason(context.Item.Id))" />
-                            }
-                        </MudButtonGroup>
-                    </CellTemplate>
-                </TemplateColumn>
-            </Columns>
-            <PagerContent>
-                <MudDataGridPager T="SeasonListModel" />
-            </PagerContent>
-        </MudDataGrid>
-    }
+    <MudPaper MinHeight="60px">
+        <MudStack Row="true" AlignItems="AlignItems.Center" Class="pa-4">
+            <MudText Typo="Typo.h3">Seasons</MudText>
+            <MudSpacer />
+            <MudButton Variant="Variant.Outlined" Color="Color.Tertiary" Size="Size.Small"
+                       StartIcon="@Icons.Material.Filled.Add" IconSize="Size.Small" IconColor="Color.Tertiary"
+                       OnClick="NewSeason" Class="btn-md">
+                New
+            </MudButton>
+        </MudStack>
+    </MudPaper>
+    <MudDataGrid T="SeasonListModel" Items="@SeasonListItems.OrderByDescending(e => e.Year)" Dense="true">
+        <Columns>
+            <PropertyColumn Property="e => e.Year" />
+            <TemplateColumn T="SeasonListModel"
+                            Title="NO"
+                            SortBy="sort => sort.DriverNumber"
+                            HeaderClass="number-col hide-sort-icons"
+                            CellClass="number-col">
+                <CellTemplate>
+                    <NumberDisplay Colour="@context.Item.DriverColour"
+                                   Accent="@context.Item.DriverAccent">
+                        @context.Item.DriverNumber
+                    </NumberDisplay>
+                </CellTemplate>
+            </TemplateColumn>
+            <TemplateColumn T="SeasonListModel" Title="Leading driver">
+                <CellTemplate>
+                    <MudStack Row="true" AlignItems="AlignItems.Center">
+                        <MudText Class="overflow-hider">@context.Item.DriverName</MudText>
+                        <MudSpacer />
+                        <CountryFlag Code="context.Item.DriverNationality" Size="ElementSize.Small" />
+                    </MudStack>
+                </CellTemplate>
+            </TemplateColumn>
+            <TemplateColumn T="SeasonListModel" Sortable="false" Class="accent-cell">
+                <CellTemplate>
+                    <SmolAccent Colour="@context.Item.TeamColour" />
+                </CellTemplate>
+            </TemplateColumn>
+            <TemplateColumn T="SeasonListModel" Title="Leading team">
+                <CellTemplate>
+                    <MudStack Row="true" AlignItems="AlignItems.Center">
+                        <MudText Class="overflow-hider">@context.Item.TeamName</MudText>
+                        <MudSpacer />
+                        <CountryFlag Code="context.Item.TeamNationality" Size="ElementSize.Small" />
+                    </MudStack>
+                </CellTemplate>
+            </TemplateColumn>
+            <PropertyColumn Property="e => e.League" />
+            <PropertyColumn Property="e => e.State" />
+            <TemplateColumn T="SeasonListModel" Sortable="false">
+                <CellTemplate>
+                    <MudButtonGroup Size="@Size.Small">
+                        <MudIconButton Icon="@Icons.Material.Outlined.ContentCopy"
+                                       OnClick="@(() => CopySeason(context.Item.Id))" />
+                        <MudIconButton Icon="@Icons.Material.Outlined.Logout"
+                                       OnClick="@(() => GoToOverview(context.Item.Id))" />
+                        @if (context.Item.State == State.Concept)
+                        {
+                            <MudIconButton Color="Color.Error"
+                                           Icon="@Icons.Material.Outlined.Delete"
+                                           OnClick="@(() => DeleteSeason(context.Item.Id))" />
+                        }
+                    </MudButtonGroup>
+                </CellTemplate>
+            </TemplateColumn>
+        </Columns>
+        <PagerContent>
+            <MudDataGridPager T="SeasonListModel" />
+        </PagerContent>
+    </MudDataGrid>
 </MudContainer>
 
 @code {
     private List<Season> Seasons { get; set; }
     private List<League> Leagues { get; set; }
-    private List<SeasonListModel> SeasonListItems { get; set; }
+    private List<SeasonListModel> SeasonListItems { get; set; } = [];
 
     protected override async Task OnInitializedAsync()
     {
-        //_bread.Reset();
         _bread.SetBreadcrumbs(new List<BreadcrumbItem>()
         {
             new BreadcrumbItem("Home", href: ""),
@@ -136,21 +141,23 @@
         var dialog = await _dialogService.ShowAsync<SeasonEditor>("Modify season", parameters);
         var result = await dialog.Result;
 
+        if (result == null || result.Canceled)
+            return;
+
         if (!result.Canceled && result.Data != null && result.Data is Season updatedItem)
         {
             await _seasonService.UpdateSeason(updatedItem);
-            _nav.NavigateTo($"/overview/{updatedItem.Id}");
+            _navigation.NavigateTo($"/overview/{updatedItem.Id}");
         }
     }
 
     private async Task DeleteSeason(long seasonId)
     {
         var result = await _seasonService.DeleteSeason(seasonId);
+
         if (result)
-        {
             Seasons.Remove(Seasons.Single(e => e.Id == seasonId));
-        }
     }
 
-    private void GoToOverview(long seasonId) => _nav.NavigateTo($"/overview/{seasonId}");
+    private void GoToOverview(long seasonId) => _navigation.NavigateTo($"/overview/{seasonId}");
 }
