--- a/SimTECH/SimTECH/Pages/Seasons/Overview/Components/DriverStandings.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/Components/DriverStandings.razor
@@ -1,7 +1,7 @@
 ﻿<MudPaper Elevation="15" Class="pa-4 mud-height-full">
     <MudPaper MinHeight="60px">
         <MudText Typo="Typo.h5">Drivers</MudText>
-        <MudDivider />
+        <MudDivider Class="my-1" />
     </MudPaper>
     <MudTable T="StandingDriverModel" Items="@StandingDrivers" Dense="true">
         <HeaderContent>
