--- a/SimTECH/SimTECH/Pages/Seasons/Overview/Dialogs/RaceEditor.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/Dialogs/RaceEditor.razor
@@ -18,7 +18,7 @@
                 </MudChipSet>
             </div>
 
-            <MudSwitch T="bool" @bind-Checked="variableRaceLength" Label="Variable race length" />
+            <MudSwitch T="bool" @bind-Value="variableRaceLength" Label="Variable race length" />
 
             @if (variableRaceLength)
             {
